# database_hh_vacancies

./: README.md  database.ini  pyproject.toml
src/: config_hh.py  dbmanager.py  main.py  requests.sql  utils.py
