[tool.poetry]
name = "database-hh-vacancies"
version = "0.1.0"
description = ""
authors = ["Elizaveta Averyanova <bellerensrde@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
configparser = "^6.0.1"
psycopg2 = "^2.9.9"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
